--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 @font-face {
   font-family: 'League Spartan';
-  src: url('./fonts/LeagueSpartan-Bold.ttf') format('woff2');
+  src: url('LeagueSpartan-Bold.ttf') format('woff2');
   font-weight: 700;
   font-style: bold;
 }
